--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^12.0.0",
     "formik": "^2.4.6",
     "next": "15.4.1",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0",
